qt6/gen_qbuffer.nim

import Qt6Widgets_libs

{.push raises: [].}

from system/ansi_c import c_free

type
  struct_miqt_string {.used.} = object
    len: csize_t
    data: cstring

  struct_miqt_array {.used.} = object
    len: csize_t
    data: pointer

  struct_miqt_map {.used.} = object
    len: csize_t
    keys: pointer
    values: pointer

  miqt_uintptr_t {.importc: "uintptr_t", header: "stdint.h", used.} = uint
  miqt_intptr_t {.importc: "intptr_t", header: "stdint.h", used.} = int

func fromBytes(T: type string, v: openArray[byte]): string {.used.} =
  if v.len > 0:
    result = newString(v.len)
    when nimvm:
      for i, c in v:
        result[i] = cast[char](c)
    else:
      copyMem(addr result[0], unsafeAddr v[0], v.len)

const cflags = gorge("pkg-config -cflags Qt6Widgets")
{.compile("gen_qbuffer.cpp", cflags).}


import gen_qbuffer_types
export gen_qbuffer_types

import
  gen_qcoreevent,
  gen_qiodevice,
  gen_qiodevicebase,
  gen_qmetaobject,
  gen_qobject,
  gen_qobjectdefs
export
  gen_qcoreevent,
  gen_qiodevice,
  gen_qiodevicebase,
  gen_qmetaobject,
  gen_qobject,
  gen_qobjectdefs

type cQBuffer*{.exportc: "QBuffer", incompleteStruct.} = object

proc fcQBuffer_new(): ptr cQBuffer {.importc: "QBuffer_new".}
proc fcQBuffer_new2(parent: pointer): ptr cQBuffer {.importc: "QBuffer_new2".}
proc fcQBuffer_metaObject(self: pointer, ): pointer {.importc: "QBuffer_metaObject".}
proc fcQBuffer_metacast(self: pointer, param1: cstring): pointer {.importc: "QBuffer_metacast".}
proc fcQBuffer_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QBuffer_metacall".}
proc fcQBuffer_tr(s: cstring): struct_miqt_string {.importc: "QBuffer_tr".}
proc fcQBuffer_buffer(self: pointer, ): struct_miqt_string {.importc: "QBuffer_buffer".}
proc fcQBuffer_buffer2(self: pointer, ): struct_miqt_string {.importc: "QBuffer_buffer2".}
proc fcQBuffer_setData(self: pointer, data: struct_miqt_string): void {.importc: "QBuffer_setData".}
proc fcQBuffer_setData2(self: pointer, data: cstring, len: cint): void {.importc: "QBuffer_setData2".}
proc fcQBuffer_data(self: pointer, ): struct_miqt_string {.importc: "QBuffer_data".}
proc fcQBuffer_open(self: pointer, openMode: cint): bool {.importc: "QBuffer_open".}
proc fcQBuffer_close(self: pointer, ): void {.importc: "QBuffer_close".}
proc fcQBuffer_size(self: pointer, ): clonglong {.importc: "QBuffer_size".}
proc fcQBuffer_pos(self: pointer, ): clonglong {.importc: "QBuffer_pos".}
proc fcQBuffer_seek(self: pointer, off: clonglong): bool {.importc: "QBuffer_seek".}
proc fcQBuffer_atEnd(self: pointer, ): bool {.importc: "QBuffer_atEnd".}
proc fcQBuffer_canReadLine(self: pointer, ): bool {.importc: "QBuffer_canReadLine".}
proc fcQBuffer_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QBuffer_tr2".}
proc fcQBuffer_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QBuffer_tr3".}
proc fQBuffer_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QBuffer_virtualbase_metacall".}
proc fcQBuffer_override_virtual_metacall(self: pointer, slot: int) {.importc: "QBuffer_override_virtual_metacall".}
proc fQBuffer_virtualbase_open(self: pointer, openMode: cint): bool{.importc: "QBuffer_virtualbase_open".}
proc fcQBuffer_override_virtual_open(self: pointer, slot: int) {.importc: "QBuffer_override_virtual_open".}
proc fQBuffer_virtualbase_close(self: pointer, ): void{.importc: "QBuffer_virtualbase_close".}
proc fcQBuffer_override_virtual_close(self: pointer, slot: int) {.importc: "QBuffer_override_virtual_close".}
proc fQBuffer_virtualbase_size(self: pointer, ): clonglong{.importc: "QBuffer_virtualbase_size".}
proc fcQBuffer_override_virtual_size(self: pointer, slot: int) {.importc: "QBuffer_override_virtual_size".}
proc fQBuffer_virtualbase_pos(self: pointer, ): clonglong{.importc: "QBuffer_virtualbase_pos".}
proc fcQBuffer_override_virtual_pos(self: pointer, slot: int) {.importc: "QBuffer_override_virtual_pos".}
proc fQBuffer_virtualbase_seek(self: pointer, off: clonglong): bool{.importc: "QBuffer_virtualbase_seek".}
proc fcQBuffer_override_virtual_seek(self: pointer, slot: int) {.importc: "QBuffer_override_virtual_seek".}
proc fQBuffer_virtualbase_atEnd(self: pointer, ): bool{.importc: "QBuffer_virtualbase_atEnd".}
proc fcQBuffer_override_virtual_atEnd(self: pointer, slot: int) {.importc: "QBuffer_override_virtual_atEnd".}
proc fQBuffer_virtualbase_canReadLine(self: pointer, ): bool{.importc: "QBuffer_virtualbase_canReadLine".}
proc fcQBuffer_override_virtual_canReadLine(self: pointer, slot: int) {.importc: "QBuffer_override_virtual_canReadLine".}
proc fQBuffer_virtualbase_connectNotify(self: pointer, param1: pointer): void{.importc: "QBuffer_virtualbase_connectNotify".}
proc fcQBuffer_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QBuffer_override_virtual_connectNotify".}
proc fQBuffer_virtualbase_disconnectNotify(self: pointer, param1: pointer): void{.importc: "QBuffer_virtualbase_disconnectNotify".}
proc fcQBuffer_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QBuffer_override_virtual_disconnectNotify".}
proc fQBuffer_virtualbase_readData(self: pointer, data: cstring, maxlen: clonglong): clonglong{.importc: "QBuffer_virtualbase_readData".}
proc fcQBuffer_override_virtual_readData(self: pointer, slot: int) {.importc: "QBuffer_override_virtual_readData".}
proc fQBuffer_virtualbase_writeData(self: pointer, data: cstring, len: clonglong): clonglong{.importc: "QBuffer_virtualbase_writeData".}
proc fcQBuffer_override_virtual_writeData(self: pointer, slot: int) {.importc: "QBuffer_override_virtual_writeData".}
proc fQBuffer_virtualbase_isSequential(self: pointer, ): bool{.importc: "QBuffer_virtualbase_isSequential".}
proc fcQBuffer_override_virtual_isSequential(self: pointer, slot: int) {.importc: "QBuffer_override_virtual_isSequential".}
proc fQBuffer_virtualbase_reset(self: pointer, ): bool{.importc: "QBuffer_virtualbase_reset".}
proc fcQBuffer_override_virtual_reset(self: pointer, slot: int) {.importc: "QBuffer_override_virtual_reset".}
proc fQBuffer_virtualbase_bytesAvailable(self: pointer, ): clonglong{.importc: "QBuffer_virtualbase_bytesAvailable".}
proc fcQBuffer_override_virtual_bytesAvailable(self: pointer, slot: int) {.importc: "QBuffer_override_virtual_bytesAvailable".}
proc fQBuffer_virtualbase_bytesToWrite(self: pointer, ): clonglong{.importc: "QBuffer_virtualbase_bytesToWrite".}
proc fcQBuffer_override_virtual_bytesToWrite(self: pointer, slot: int) {.importc: "QBuffer_override_virtual_bytesToWrite".}
proc fQBuffer_virtualbase_waitForReadyRead(self: pointer, msecs: cint): bool{.importc: "QBuffer_virtualbase_waitForReadyRead".}
proc fcQBuffer_override_virtual_waitForReadyRead(self: pointer, slot: int) {.importc: "QBuffer_override_virtual_waitForReadyRead".}
proc fQBuffer_virtualbase_waitForBytesWritten(self: pointer, msecs: cint): bool{.importc: "QBuffer_virtualbase_waitForBytesWritten".}
proc fcQBuffer_override_virtual_waitForBytesWritten(self: pointer, slot: int) {.importc: "QBuffer_override_virtual_waitForBytesWritten".}
proc fQBuffer_virtualbase_readLineData(self: pointer, data: cstring, maxlen: clonglong): clonglong{.importc: "QBuffer_virtualbase_readLineData".}
proc fcQBuffer_override_virtual_readLineData(self: pointer, slot: int) {.importc: "QBuffer_override_virtual_readLineData".}
proc fQBuffer_virtualbase_skipData(self: pointer, maxSize: clonglong): clonglong{.importc: "QBuffer_virtualbase_skipData".}
proc fcQBuffer_override_virtual_skipData(self: pointer, slot: int) {.importc: "QBuffer_override_virtual_skipData".}
proc fQBuffer_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QBuffer_virtualbase_event".}
proc fcQBuffer_override_virtual_event(self: pointer, slot: int) {.importc: "QBuffer_override_virtual_event".}
proc fQBuffer_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QBuffer_virtualbase_eventFilter".}
proc fcQBuffer_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QBuffer_override_virtual_eventFilter".}
proc fQBuffer_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QBuffer_virtualbase_timerEvent".}
proc fcQBuffer_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QBuffer_override_virtual_timerEvent".}
proc fQBuffer_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QBuffer_virtualbase_childEvent".}
proc fcQBuffer_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QBuffer_override_virtual_childEvent".}
proc fQBuffer_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QBuffer_virtualbase_customEvent".}
proc fcQBuffer_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QBuffer_override_virtual_customEvent".}
proc fcQBuffer_staticMetaObject(): pointer {.importc: "QBuffer_staticMetaObject".}
proc fcQBuffer_delete(self: pointer) {.importc: "QBuffer_delete".}


func init*(T: type QBuffer, h: ptr cQBuffer): QBuffer =
  T(h: h)
proc create*(T: type QBuffer, ): QBuffer =

  QBuffer.init(fcQBuffer_new())
proc create*(T: type QBuffer, parent: gen_qobject.QObject): QBuffer =

  QBuffer.init(fcQBuffer_new2(parent.h))
proc metaObject*(self: QBuffer, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQBuffer_metaObject(self.h))

proc metacast*(self: QBuffer, param1: cstring): pointer =

  fcQBuffer_metacast(self.h, param1)

proc metacall*(self: QBuffer, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQBuffer_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QBuffer, s: cstring): string =

  let v_ms = fcQBuffer_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc buffer*(self: QBuffer, ): seq[byte] =

  var v_bytearray = fcQBuffer_buffer(self.h)
  var vx_ret = @(toOpenArrayByte(v_bytearray.data, 0, int(v_bytearray.len)-1))
  c_free(v_bytearray.data)
  vx_ret

proc buffer2*(self: QBuffer, ): seq[byte] =

  var v_bytearray = fcQBuffer_buffer2(self.h)
  var vx_ret = @(toOpenArrayByte(v_bytearray.data, 0, int(v_bytearray.len)-1))
  c_free(v_bytearray.data)
  vx_ret

proc setData*(self: QBuffer, data: seq[byte]): void =

  fcQBuffer_setData(self.h, struct_miqt_string(data: cast[cstring](if len(data) == 0: nil else: unsafeAddr data[0]), len: csize_t(len(data))))

proc setData2*(self: QBuffer, data: cstring, len: cint): void =

  fcQBuffer_setData2(self.h, data, len)

proc data*(self: QBuffer, ): seq[byte] =

  var v_bytearray = fcQBuffer_data(self.h)
  var vx_ret = @(toOpenArrayByte(v_bytearray.data, 0, int(v_bytearray.len)-1))
  c_free(v_bytearray.data)
  vx_ret

proc open*(self: QBuffer, openMode: gen_qiodevicebase.QIODeviceBaseOpenModeFlag): bool =

  fcQBuffer_open(self.h, cint(openMode))

proc close*(self: QBuffer, ): void =

  fcQBuffer_close(self.h)

proc size*(self: QBuffer, ): clonglong =

  fcQBuffer_size(self.h)

proc pos*(self: QBuffer, ): clonglong =

  fcQBuffer_pos(self.h)

proc seek*(self: QBuffer, off: clonglong): bool =

  fcQBuffer_seek(self.h, off)

proc atEnd*(self: QBuffer, ): bool =

  fcQBuffer_atEnd(self.h)

proc canReadLine*(self: QBuffer, ): bool =

  fcQBuffer_canReadLine(self.h)

proc tr2*(_: type QBuffer, s: cstring, c: cstring): string =

  let v_ms = fcQBuffer_tr2(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc tr3*(_: type QBuffer, s: cstring, c: cstring, n: cint): string =

  let v_ms = fcQBuffer_tr3(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc callVirtualBase_metacall(self: QBuffer, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =


  fQBuffer_virtualbase_metacall(self.h, cint(param1), param2, param3)
